# heavy_cart_ws

./: .gitignore  README.md  env.sh  joystick.yaml  mav.tlog  platformio.ini
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
docs/: index.md  neato_xv.md
src/heavy_cart/src/: main.cpp
src/heavy_cart_application/: CMakeLists.txt  package.xml
src/heavy_cart_application/heavy_cart_application/: mav_node.py  mavlink.py  utils.py
src/heavy_cart_bringup/: CMakeLists.txt  package.xml
src/heavy_cart_bringup/config/: controller_manager.yaml  heavy.yaml
src/heavy_cart_bringup/launch/: control.launch.py  gazebo.launch.py  real_robot.launch.py  turtlebot.launch.py
src/heavy_cart_description/: CMakeLists.txt  package.xml
src/heavy_cart_description/models/rrbot/: model.config  model.sdf
src/heavy_cart_description/models/turtlebot3_burger/: model.sdf
src/heavy_cart_description/urdf/: gazebo_control.xacro  heavy_cart_i2c_control.xacro  ros2_control.xacro  ros2_control_heavy_cart.xacro  turtlebot3_burger.xacro  turtlebot3_gazebo.xacro  turtlebot3_materials.xacro
src/heavy_cart_gazebo/: CMakeLists.txt  package.xml
src/heavy_cart_gazebo/worlds/: empty.sdf  empty.world  rrbot.world
src/heavy_cart_hardware/: CMakeLists.txt  heavy_cart_arduino.xml  heavy_cart_i2c_hw.xml  package.xml
src/heavy_cart_hardware/include/heavy_cart_hardware/: heavy_cart_hardware.hpp  heavy_cart_i2c_diff_hatdware.hpp  mcp4725.hpp
src/heavy_cart_hardware/src/: heavy_cart_hardware.cpp  heavy_cart_i2c_diff_hatdware.cpp  mcp4725.cpp
src/heavy_cart_hardware/tests/: mcp4725.cpp  twist_stamper.py
